--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
     <script src="static/js/application.js"></script>
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -19,13 +21,8 @@
 
     </div>
 
-    <div class="container" id="content">
-        <div class="row">
-            <p>Asynchronous page updates will appear here:</p>
-            <h3>Number list:</h3>
-            <div id="log">
-            </div> <!-- /#log -->
-        </div>
+    <div class="container" id="gauges">
+        <div id="chart_div" style="width: 400px; height: 120px;"></div>
     </div>
 
 </body>
