Update loco name on locomotive change

--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
             <section class="minitron embossed-light text-center">
                 <div class="container">
                     <h1>Locomotive</h1>
-                    <p id="loco-name"></p>
+                    <p id="loco-name">&nbsp;</p>
                 </div>
             </section>
 
