--- a/static/css/steam-punk-controls.css
+++ b/static/css/steam-punk-controls.css
@@ -7,6 +7,10 @@
     --paper: url(/static/img/paper-tileable.jpg);
 }
 
+body.sp-grabbing {
+    cursor: grabbing;
+}
+
 .sp-control .embossed-heavy,
 .level {
     border: 1px solid rgba(0, 0, 0, 0.25);
@@ -37,10 +41,14 @@
     transition: all 0.4s ease;
 }
 
+.sp-control .noTransitions {
+    transition: none;
+}
+
 .handle {
     position: relative;
     height: var(--control-width-small);
-    width: calc(var(--control-width) / 2);
+    width: calc(var(--control-width) / 3);
 }
 
 /* Handles */
@@ -77,7 +85,7 @@
     border-radius: 4px;
     box-shadow: -3px 6px 10px 0px #000000ff,
         inset 3px -6px 8px 0px rgba(0, 0, 0, 0.57);
-    cursor: not-allowed;
+    cursor: grab;
     margin-bottom: 2rem;
 }
 
@@ -105,6 +113,7 @@
     position: absolute;
     bottom: 0;
     width: 100%;
+    max-height: 100%;
     background-color: red;
 }
 .level.oil .contents {
