--- a/templates/index.html
+++ b/templates/index.html
@@ -66,6 +66,7 @@
                     </div>
                     <div class="col d-flex justify-content-center">
                         <div id="gauge-speed"></div>
+                        <div id="handle-horn"></div>
                     </div>
                 </div>
 
@@ -76,6 +77,7 @@
                     <div class="col d-flex justify-content-center">
                         <div id="handle-regulator"></div>
                         <div id="handle-reverser"></div>
+                        <div id="handle-train-brake"></div>
                     </div>
                 </div>
 
